# xmpp-start

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  agent1_current.md  agent1_tasks.md  agent2_current.md  agent2_tasks.md  docker-compose.test.yml  docker-compose.yml
.claude/: CLAUDE.md  PLAN.md  UNICODE_TODO.md  tasks.yaml
.claude/agent-memory/architect/: MEMORY.md  feedback_minidom_builder_api.md  feedback_sqlx_api.md  project_omemo_phase0.md
.claude/agent-memory/builder/: MEMORY.md  project_multi_agent.md  project_rust_analyzer_linter.md
.claude/tasks/: tasks.yaml
.github/workflows/: ci.yml  release.yml
docker/prosody/: prosody.cfg.lua
docker/test/: Dockerfile  entrypoint.sh  prosody.cfg.lua
docs/: OMEMO_ARCHITECTURE.md
migrations/: 0001_initial.up.sql  0002_muted_conversations.up.sql  0003_multi_account.up.sql  0004_omemo_keys.up.sql  0005_encrypted_conversations.up.sql
packaging/aur/: PKGBUILD
packaging/debian/: control
packaging/flatpak/: org.xmppstart.App.yaml
packaging/rpm/: xmpp-start.spec
src/: main.rs  notifications.rs
src/config/: account.rs  mod.rs
src/i18n/: mod.rs
src/store/: avatar_crop.rs  conversation_repo.rs  message_repo.rs  mod.rs  roster_repo.rs  thumbnail.rs
src/ui/: about.rs  account_details.rs  account_state.rs  account_switcher.rs  adhoc.rs  audio_player.rs  avatar.rs  benchmark.rs  blocklist.rs  chat.rs  conversation.rs  data_forms.rs  link_preview.rs  login.rs  mod.rs  muc_panel.rs  navigation.rs  omemo_trust.rs  palette.rs  settings.rs  sidebar.rs  spam_report.rs  styles.rs  styling.rs  xmpp_events.rs
src/ui/conversation/: mod.rs  update.rs  view.rs
src/xmpp/: engine.rs  mod.rs  multi_engine.rs  subscription.rs
src/xmpp/connection/: dns.rs  insecure_tls.rs  mod.rs  proxy.rs  sasl.rs  tcp.rs
src/xmpp/handlers/: iq.rs  message.rs
src/xmpp/modules/: account.rs  adhoc.rs  avatar.rs  blocking.rs  bob.rs  bookmarks.rs  catchup.rs  command_palette.rs  console.rs  conversation_sync.rs  disco.rs  entity_time.rs  file_upload.rs  geoloc.rs  ignore.rs  link_preview.rs  mam.rs  message_mutations.rs  mod.rs  muc.rs  muc_admin.rs  muc_config.rs  muc_voice.rs  presence_machine.rs  push.rs  push_cleanup.rs  registration.rs  spam_report.rs  stickers.rs  stream_mgmt.rs  sync.rs  vcard_edit.rs  xmpp_uri.rs
src/xmpp/modules/omemo/: bundle.rs  device.rs  message.rs  mod.rs  session.rs  store.rs
tasks/: gap_analysis.md  tasks.yaml  todo.md
test-server/: Dockerfile  Makefile  docker-compose.yml  gui_test.py  prosody.cfg.lua  setup.sh
tests/: critical_flows.rs  e2e.rs
