[package]
name = "xmpp-start"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Native XMPP desktop messenger — Rust/iced rewrite of fluux-messenger"
license = "MIT"

[lib]
name = "xmpp_start"
path = "src/lib.rs"

[[bin]]
name = "xmpp-start"
path = "src/main.rs"

[dependencies]
# GUI
iced = { version = "0.13", features = ["tokio", "image", "svg", "advanced"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# XMPP
tokio-xmpp = "4"
xmpp-parsers = "0.21"

# TLS (via tokio-xmpp / rustls)
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"

# DNS SRV
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# HTTP (upload, link previews, host-meta discovery)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Storage
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono", "uuid"] }

# Keychain
keyring = "3"

# i18n
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing (avatars, thumbnails)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Base64 (avatar data encode/decode)
base64 = "0.22"

# SHA-1 (XEP-0115 capability hash)
sha1 = { version = "0.10", features = ["oid"] }

# Desktop notifications
notify-rust = { version = "4" }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"

[lints.rust]
# Enforce good practices
unused_imports = "warn"
unused_variables = "warn"
unused_must_use = "deny"
unreachable_patterns = "warn"

[lints.clippy]
# Style
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
map_unwrap_or = "warn"
# Pedantic (opt-in)
str_split_at_newline = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
