[package]
name = "rexisce"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "ReXisCe — A Rust XMPP Client"
license = "MIT"

[lib]
name = "rexisce"
path = "src/lib.rs"

[[bin]]
name = "rexisce"
path = "src/main.rs"

[dependencies]
# GUI
iced = { version = "0.13", features = ["tokio", "image", "svg", "advanced"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# XMPP
tokio-xmpp = "4"
xmpp-parsers = "0.21"

# TLS (via tokio-xmpp / rustls)
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"

# DNS SRV
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# HTTP (upload, link previews, host-meta discovery)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Storage
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono", "uuid"] }

# Keychain — platform backends must be feature-gated in keyring v3
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# i18n
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing (avatars, thumbnails)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Base64 (avatar data encode/decode)
base64 = "0.22"

# SHA-1 (XEP-0115 capability hash)
sha1 = { version = "0.10", features = ["oid"] }

# Desktop notifications
notify-rust = { version = "4" }

# Native file dialog (E4/I3 file upload)
rfd = "0.14"

# Clipboard image paste (I1)
arboard = "3"

# M4: Audio recording + playback (voice messages)
cpal = "0.15"
hound = "3"
rodio = "0.19"

# OMEMO E2E encryption (XEP-0384) — Signal/Olm protocol, pure Rust
vodozemac = "0.8"
# AES-256-GCM for OMEMO payload encryption
aes-gcm = "0.10"
rand = "0.8"

# Open URLs in default browser
opener = "0.7"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# M1: OS dark/light mode detection
dark-light = "2"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"

[lints.rust]
# Enforce good practices
unused_imports = "warn"
unused_variables = "warn"
unused_must_use = "deny"
unreachable_patterns = "warn"

[lints.clippy]
# Style
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
map_unwrap_or = "warn"
# Pedantic (opt-in)
str_split_at_newline = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
